--- a/construction.html
+++ b/construction.html
@@ -11,7 +11,8 @@
     <!-- main css link -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/concern.css">
+    <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/interior.css">
 </head>
 <body>
     <div class="top-header">
@@ -105,7 +106,7 @@
         <img src="images/Kitchen-1st-View.jpg">
         <div class="container">
             <div class="content">
-                <h2>concern</h2>
+                <h2>constarction</h2>
                 <div class="btn">
                     <a href="index.html"><i class="fa-solid fa-house"></i> home</a>
                 </div>
@@ -113,72 +114,249 @@
         </div>
     </div>
     <!-- banner section end -->
-
     <!-- about contentn section end -->
-    <section class="your-fecabilty-section">
+    <section class="intorior-section">
         <div class="container">
-            <div class="header">
-                <h4>our facilities</h4>
-            </div>
             <div class="main-column">
                 <div class="flex-column">
-                    <div class="icon">
-                        <i class="fa-solid fa-clock-rotate-left"></i>
-                    </div>
+                    <img src="images/constructionimage2.jpeg">
                     <div class="content">
-                        <h5>24/7 Online Support </h5>
-                        <p>Each time is very important to us. European IT is giving 24/7online support for the students for any information review and solving the problems.</p>
+                        <h5>DesignWire</h5>
+                        <h4><a href="#">Experience Boba Bliss at Donald Glover’s Jellyman Tea Shop</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aliquid expedita nisi magnam rerum sapiente nostrum saepe? Porro, ea reprehenderit?</p>
                     </div>
                 </div>
                 <div class="flex-column">
-                    <div class="icon">
-                        <i class="fa-solid fa-clock-rotate-left"></i>
-                    </div>
+                    <img src="images/constructionimage2.jpeg">
                     <div class="content">
-                        <h5>24/7 Online Support </h5>
-                        <p>Each time is very important to us. European IT is giving 24/7online support for the students for any information review and solving the problems.</p>
+                        <h5>DesignWire</h5>
+                        <h4><a href="#">Experience Boba Bliss at Donald Glover’s Jellyman Tea Shop</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aliquid expedita nisi magnam rerum sapiente nostrum saepe? Porro, ea reprehenderit?</p>
                     </div>
                 </div>
                 <div class="flex-column">
-                    <div class="icon">
-                        <i class="fa-solid fa-clock-rotate-left"></i>
-                    </div>
+                    <img src="images/constructionimage2.jpeg">
                     <div class="content">
-                        <h5>24/7 Online Support </h5>
-                        <p>Each time is very important to us. European IT is giving 24/7online support for the students for any information review and solving the problems.</p>
-                    </div>
-                </div>
-                <div class="flex-column">
-                    <div class="icon">
-                        <i class="fa-solid fa-clock-rotate-left"></i>
-                    </div>
-                    <div class="content">
-                        <h5>24/7 Online Support </h5>
-                        <p>Each time is very important to us. European IT is giving 24/7online support for the students for any information review and solving the problems.</p>
-                    </div>
-                </div>
-                <div class="flex-column">
-                    <div class="icon">
-                        <i class="fa-solid fa-clock-rotate-left"></i>
-                    </div>
-                    <div class="content">
-                        <h5>24/7 Online Support </h5>
-                        <p>Each time is very important to us. European IT is giving 24/7online support for the students for any information review and solving the problems.</p>
-                    </div>
-                </div>
-                <div class="flex-column">
-                    <div class="icon">
-                        <i class="fa-solid fa-clock-rotate-left"></i>
-                    </div>
-                    <div class="content">
-                        <h5>24/7 Online Support </h5>
-                        <p>Each time is very important to us. European IT is giving 24/7online support for the students for any information review and solving the problems.</p>
+                        <h5>DesignWire</h5>
+                        <h4><a href="#">Experience Boba Bliss at Donald Glover’s Jellyman Tea Shop</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aliquid expedita nisi magnam rerum sapiente nostrum saepe? Porro, ea reprehenderit?</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- facabilty section end -->
+    <!-- interior section end -->
+    <section class="interior-product-section">
+        <div class="container">
+            <div class="main-column">
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="add-section">
+        <div class="container">
+            <div class="main-column">
+                <a href="#">
+                    <img src="images/8165575108366498980.jpeg">
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- add section end -->
+    <section class="interior-product-section last-section">
+        <div class="container">
+            <div class="main-column">
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-3.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="interior-product-section last-section">
+        <div class="container">
+            <div class="header">
+                <h4>LAUNCH products</h4>
+            </div>
+            <div class="main-column">
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+                <div class="product-column">
+                    <div class="image">
+                        <a href="#">
+                            <img src="images/product-2.jpg" >
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h4><a href="#">10 Questions With… Mathieu Lehanneur</a></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="contact-us-section">
         <div class="container">
             <div class="main-column">
