--- a/gallery.html
+++ b/gallery.html
@@ -60,28 +60,36 @@
                         </div>
                         <div class="main-column">
                             <div class="flex-column">
-                                <img src="images/architect1.png">
-                                <div class="content">
-                                    <h2><a href="interior.html">Interior</a></h2>
-                                </div>
+                               <a href="interior.html">
+                                    <img src="images/architect1.png">
+                                    <div class="content">
+                                        <h2><a href="#">Interior</a></h2>
+                                    </div>
+                               </a>
                             </div>
                             <div class="flex-column">
-                                <img src="images/conversation.png">
-                                <div class="content">
-                                    <h2><a href="#">Construction</a></h2>
-                                </div>
+                                <a href="construction.html">
+                                    <img src="images/conversation.png">
+                                    <div class="content">
+                                        <h2><a href="#">Construction</a></h2>
+                                    </div>
+                                </a>
                             </div>
                             <div class="flex-column">
-                                <img src="images/architect1.png">
-                                <div class="content">
-                                    <h2><a href="#">E-Commerce</a></h2>
-                                </div>
+                                <a href="#">
+                                    <img src="images/architect1.png">
+                                    <div class="content">
+                                        <h2><a href="#">E-Commerce</a></h2>
+                                    </div>
+                                </a>
                             </div>
                             <div class="flex-column">
-                                <img src="images/architect1.png">
-                                <div class="content">
-                                    <h2><a href="#">Consultancy</a></h2>
-                                </div>
+                                <a href="#">
+                                    <img src="images/architect1.png">
+                                    <div class="content">
+                                        <h2><a href="#">Consultancy</a></h2>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
