--- a/interior.html
+++ b/interior.html
@@ -69,7 +69,7 @@
                                </a>
                             </div>
                             <div class="flex-column">
-                                <a href="#">
+                                <a href="construction.html">
                                     <img src="images/conversation.png">
                                     <div class="content">
                                         <h2><a href="#">Construction</a></h2>
@@ -357,9 +357,6 @@
             </div>
         </div>
     </section>
-
-
-
     <section class="contact-us-section">
         <div class="container">
             <div class="main-column">
