--- a/contact.html
+++ b/contact.html
@@ -60,28 +60,36 @@
                         </div>
                         <div class="main-column">
                             <div class="flex-column">
-                                <img src="images/architect1.png">
-                                <div class="content">
-                                    <h2><a href="interior.html">Interior</a></h2>
-                                </div>
+                               <a href="interior.html">
+                                    <img src="images/architect1.png">
+                                    <div class="content">
+                                        <h2><a href="#">Interior</a></h2>
+                                    </div>
+                               </a>
                             </div>
                             <div class="flex-column">
-                                <img src="images/conversation.png">
-                                <div class="content">
-                                    <h2><a href="#">Construction</a></h2>
-                                </div>
+                                <a href="construction.html">
+                                    <img src="images/conversation.png">
+                                    <div class="content">
+                                        <h2><a href="#">Construction</a></h2>
+                                    </div>
+                                </a>
                             </div>
                             <div class="flex-column">
-                                <img src="images/architect1.png">
-                                <div class="content">
-                                    <h2><a href="#">E-Commerce</a></h2>
-                                </div>
+                                <a href="#">
+                                    <img src="images/architect1.png">
+                                    <div class="content">
+                                        <h2><a href="#">E-Commerce</a></h2>
+                                    </div>
+                                </a>
                             </div>
                             <div class="flex-column">
-                                <img src="images/architect1.png">
-                                <div class="content">
-                                    <h2><a href="#">Consultancy</a></h2>
-                                </div>
+                                <a href="#">
+                                    <img src="images/architect1.png">
+                                    <div class="content">
+                                        <h2><a href="#">Consultancy</a></h2>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -106,7 +114,6 @@
     </div>
     <!-- banner section end -->
     <div class="contect-form-section">
-        <!-- <img src="images/SERVICE-BG.png" alt=""> -->
         <div class="container">
             <div class="header">
                 <h4>Any questions or remarks? Just write us a message!</h4>
@@ -192,6 +199,76 @@
         </div>
     </div>
     <!-- contact form section end -->
+    <div class="map-section">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58403.62426335959!2d90.32108057549458!3d23.810542906602993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c0c1c61277db%3A0xc7d18838730e2e59!2sMirpur%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1715529179629!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <!-- map section end -->
+    <section class="contact-us-section">
+        <div class="container">
+            <div class="main-column">
+                <div class="flex-column">
+                    <div class="icon">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                    <div class="content">
+                        <h5>Address</h5>
+                        <div class="list">
+                            <ul>
+                                <li>Noor Mansion (3rd Floor), Plot#04, </li>
+                                <li>Main Road#01, Mirpur-10, Dhaka-1216</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-column">
+                    <div class="icon">
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
+                    <div class="content">
+                        <h5>Call Us </h5>
+                        <div class="list">
+                            <ul>
+                                <li><a href="#">+4342342333</a></li>
+                                <li><a href="#">+4342342333</a></li>
+                                <li><a href="#">+4342342333</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-column">
+                    <div class="icon">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <div class="content">
+                        <h5>email </h5>
+                        <div class="list">
+                            <ul>
+                                <li><a href="#">help@europeanit-inst.com</a></li>
+                                <li><a href="#">admission@europeanit-inst.com </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-column">
+                    <div class="icon">
+                        <i class="fa-solid fa-clock-rotate-left"></i>
+                    </div>
+                    <div class="content">
+                        <h5>Address</h5>
+                        <div class="list">
+                            <ul>
+                                <li>Noor Mansion (3rd Floor), Plot#04, </li>
+                                <li>Main Road#01, Mirpur-10, Dhaka-1216</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-btn">
+                <a href="concern.html">contact us</a>
+            </div>
+        </div>
+    </section>
     <!-- contact us section end -->
     <div class="footer-section">
         <div class="container">
